# embedded-python-example

./: .gitignore  CMakeLists.txt  README.md
sample/: sample.py
src/: main.cpp
